--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol title="shoppingList">
+		<li>item 1</li>
+		<li>item 2</li>
+		<li>item 3</li>
+	</ol>
+	<ul>
+		<li title="holidayList">destination 1</li>
+		<li>destination 2</li>
+		<li>destination 3</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
