--- a/main.html
+++ b/main.html
@@ -8,13 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<ol title="shoppingList">
+	<ol data-ns-test="shoppingList">
 		<li>item 1</li>
 		<li>item 2</li>
 		<li>item 3</li>
 	</ol>
 	<ul>
-		<li title="holidayList">destination 1</li>
+		<li data-ns-test="holidayList">destination 1</li>
 		<li>destination 2</li>
 		<li>destination 3</li>
 	</ul>
