--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<ol data-ns-test="shoppingList">
+	<ol type="1" data-ns-test="shoppingList">
 		<li>item 1</li>
 		<li>item 2</li>
 		<li>item 3</li>
