--- a/main.html
+++ b/main.html
@@ -8,15 +8,15 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<ol type="1" data-ns-test="shoppingList">
-		<li>item 1</li>
-		<li>item 2</li>
-		<li>item 3</li>
+	<ol type="1">
+		<li data-ns-test="shoppingList">item 1</li>
+		<li data-ns-test="shoppingList">item 2</li>
+		<li data-ns-test="shoppingList">item 3</li>
 	</ol>
 	<ul>
 		<li data-ns-test="holidayList">destination 1</li>
-		<li>destination 2</li>
-		<li>destination 3</li>
+		<li data-ns-test="holidayList">destination 2</li>
+		<li data-ns-test="holidayList">destination 3</li>
 	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
